--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Circadian Duration Index (CDI) Calculator for analyzing circadian behavior in mice. Created by Joey Taylor. Methodology by Dr. Melissa Richardson PhD."
+      content="Circadian Duration Index (CDI) Calculator for analyzing circadian behavior in mice. Created by Yeshuwa Taylor. Methodology by Dr. Melissa E. Richardson PhD."
     />
-    <meta name="author" content="Joey Taylor" />
+    <meta name="author" content="Yeshuwa Taylor" />
     <title>CDI Calculator - Circadian Duration Index</title>
   </head>
   <body>
